--- a/Calendar/templates/Calendar/finished_jobs.html
+++ b/Calendar/templates/Calendar/finished_jobs.html
@@ -1,52 +1,29 @@
 {% extends "base.html" %}
-
+{% load string_to_date %}
 
 {% block content %}
 
 
 <h2 class="btn btn-warning btn-lg">
-    <i class="fas fa-calendar-alt"> Σύνολο: {{ page_obj.paginator.count }} Ολοκληρωμένες εργασίες </i>
+    <em class="fas fa-calendar-alt"> Ολοκληρωμένες εργασίες </em>
 </h2>
 
 
 
-<div class="form-row">
-
-    <div class="form-group col-md-4 mb-0">
-        <form  class="form-inline" action="{% url 'Calendar:search_finished_calendar_dte' %}" method="get">
-
-            <input class="form-control mr-sm-2" name="q" placeholder="Αναζήτηση ΔΤΕ..." type="text" >
-            <button class="btn btn-outline-success my-2 my-sm-0"  name="Αναζήτηση" value="Αναζήτηση" type="submit">Αναζήτηση ΔΤΕ</button>
-
-        </form>
-    </div>
-        <div class="form-group col-md-6 mb-0">
-            <form class="form-inline" action="{% url 'Calendar:search_finished_calendar' %}" method="get">
-
-                <input  class="form-control mr-sm-2" name="q"  placeholder="Αναζήτηση..." aria-label=="Αναζήτηση..." type="text" >
-                <button  class="btn btn-outline-success my-2 my-sm-0"  name="Αναζήτηση" value="Αναζήτηση" type="submit">Αναζήτηση</button>
-
-
-            </form>
-        </div>
-</div>
-
-<p></p>
-
-<table id="finished_calendar" class="table table-hover table-bordered">
+<table aria-describedby="data-table" class="table table-hover table-bordered" id="data-table">
 
     <thead>
-    <tr class="table-success" align="center">
-        <th>ID</th>
-        <th> Ημερομηνία </th>
-        <th>Σκοπός</th>
-        <th>Πελάτης</th>
+
+    <tr class="table-success">
+
+        <th > Ημερομηνία </th>
+        <th >Σκοπός</th>
+        <th >Πελάτης</th>
         <th>Μηχάνημα</th>
         <th>Ενέργειες</th>
            <th>Τεχνικός</th>
-            <th>Επείγων</th>
            <th>ΔΤΕ</th>
-<!--        <th>Μηχανήματα </th>-->
+
 
 
 
@@ -58,34 +35,49 @@
 
     <!--  H class ListView  στέλνει object_list απο το αρχείο views.py -->
     {% for obj in object_list %}
-    <tr align="center">
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.id }}</a> </td>
-        <td><a href="{{ obj.id }} " name="Ημερομηνία">{{ obj.Ημερομηνία}} </a></td>
-        <td><a  href=" {{ obj.id }}" name="Σκοπός">{{ obj.Σκοπός}} </a></td>
+    <tr>
+        <td><a href="{{ obj.id }} " ><span style="display:none">{{ obj.Ημερομηνία |string_to_timestamp }}</span> {{ obj.Ημερομηνία}} </a></td>
+        <td><a  href=" {{ obj.id }}" >{{ obj.Σκοπός}} </a></td>
         <td>
-            <a class="btn btn-primary" role="button" href=" {% url 'customers:edit_customer' obj.Customer_ID %}" name="Επωνυμία_Επιχείρησης">
+            <a class="btn btn-primary" role="button" href=" {% url 'customers:edit_customer' obj.Customer_ID %}" >
             {% if obj.Πελάτης %} {{ obj.Πελάτης}}{% else %}{% endif %}
             </a>
         </td>
 
         <td>
-            <a role="button"  class="btn btn-secondary" href=" {% url 'machines:edit_machine' obj.Copier_ID_id %}" name="Μηχάνημα">
+            <a role="button"  class="btn btn-secondary" href=" {% url 'machines:edit_machine' obj.Copier_ID_id %}" >
             {% if obj.Μηχάνημα %}{{ obj.Μηχάνημα}} {% else %} {% endif %}
             </a>
         </td>
         <td> {{obj.Ενέργειες}} </td>
            <td>{{ obj.Τεχνικός}} </td>
-         <td>{{ obj.Επείγων}} </td>
           <td>{{ obj.ΔΤΕ}} </td>
 
 
 
 
 
+    {% endfor %}
+    </tr>
+      <tfoot>
+
+    <tr class="table-success">
+        <th > Ημερομηνία </th>
+        <th >Σκοπός</th>
+        <th >Πελάτης</th>
+        <th>Μηχάνημα</th>
+        <th>Ενέργειες</th>
+           <th>Τεχνικός</th>
+           <th>ΔΤΕ</th>
+
+
+
 
     </tr>
+
+    </tfoot>
     </tbody>
-    {% endfor %}
+
 </table>
 
 
@@ -169,4 +161,3 @@ function goBack() {
 
 
 {% endblock %}
-
