--- a/Calendar/templates/Calendar/search_calendar_result.html
+++ b/Calendar/templates/Calendar/search_calendar_result.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1 class="btn btn-warning btn-lg">
-    <i class="fas fa-calendar-alt"></i>
+    <em class="fas fa-calendar-alt"></em>
     Σύνολο:  {{ object_list.paginator.count }} εργασίες βρέθηκαν</h1>
 
 
@@ -34,7 +34,7 @@
 <p></p>
 
 
-<table class="table table-hover table-bordered">
+<table id="search_calendar" aria-describedby="search_calendar" class="table table-hover table-bordered">
     <thead>
     <tr class="table-success">
         <th>ID</th>
@@ -54,16 +54,16 @@
     <!--  το "object_list" ειναι το ´κλειδί' απο το dictionary του αρχείου views.py  -->
     {% for obj in object_list %}
     <tr>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.id }} </a> </td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.Ημερομηνία }} </a> </td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.Σκοπός}} </a> </td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.Ενέργειες}} </a></td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.Τεχνικός}} </a></td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.Μετρητής}} </a></td>
-        <td><a role="button"  class="btn btn-secondary" href=" /machines/{{ obj.Copier_ID.id }}" name="id">{{ obj.Copier_ID}} </a></td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.ΔΤΕ}} </a></td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.Price}} </a> </td>
-        <td><a class="btn btn-primary" role="button" href="/customers/{{ obj.Copier_ID.Πελάτης.id }}" name="id">{{ obj.Copier_ID.Πελάτης }}</a></td>
+        <td><a href=" {{ obj.id }}" >{{ obj.id }} </a> </td>
+        <td><a href=" {{ obj.id }}" >{{ obj.Ημερομηνία }} </a> </td>
+        <td><a href=" {{ obj.id }}" >{{ obj.Σκοπός}} </a> </td>
+        <td><a href=" {{ obj.id }}" >{{ obj.Ενέργειες}} </a></td>
+        <td><a href=" {{ obj.id }}" >{{ obj.Τεχνικός}} </a></td>
+        <td><a href=" {{ obj.id }}" >{{ obj.Μετρητής}} </a></td>
+        <td><a role="button"  class="btn btn-secondary" href=" /machines/{{ obj.Copier_ID.id }}" >{{ obj.Copier_ID}} </a></td>
+        <td><a href=" {{ obj.id }}" >{{ obj.ΔΤΕ}} </a></td>
+        <td><a href=" {{ obj.id }}">{{ obj.Price}} </a> </td>
+        <td><a class="btn btn-primary" role="button" href="/customers/{{ obj.Copier_ID.Πελάτης.id }}" >{{ obj.Copier_ID.Πελάτης }}</a></td>
 
 
 
@@ -151,4 +151,35 @@ function goBack() {
 
 
 {% endblock %}
+{%  block js %}
 
+ <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+
+<!--  https://datatables.net/manual/installation  -->
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.20/af-2.3.4/b-1.6.1/b-flash-1.6.1/b-html5-1.6.1/b-print-1.6.1/cr-1.5.2/fc-3.3.0/fh-3.1.6/kt-2.5.1/r-2.2.3/rg-1.1.1/rr-1.2.6/sp-1.0.1/sl-1.3.1/datatables.min.css"/>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.20/af-2.3.4/b-1.6.1/b-flash-1.6.1/b-html5-1.6.1/b-print-1.6.1/cr-1.5.2/fc-3.3.0/fh-3.1.6/kt-2.5.1/r-2.2.3/rg-1.1.1/rr-1.2.6/sp-1.0.1/sl-1.3.1/datatables.min.js"></script>
+
+<script>
+
+    $(document).ready( function () {
+    $('#search_calendar').DataTable({
+
+    dom: 'B<"clear">lfrtip',
+    buttons: {
+        name: 'primary',
+        buttons: [  'copy', 'excel', 'pdf' ]
+
+        }}
+
+    );
+} );
+</script>
+{%  endblock js %}
