--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -1,26 +1,31 @@
+{% block content %}
 <!DOCTYPE html>
-<html>
+<html lang="el">
 
 <head>
-    <title>Login</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+
+
+	<title>Σύνδεση</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 
 
     <style>
+			/* Coded with love by Mutiullah Samim */
 		body,
 		html {
 			margin: 0;
 			padding: 0;
 			height: 100%;
-			background: #7abecc !important;
+			background: #60a3bc !important;
 		}
 		.user_card {
+			height: 400px;
 			width: 350px;
 			margin-top: auto;
 			margin-bottom: auto;
-			background: #74cfbf;
+			background: #f39c12;
 			position: relative;
 			display: flex;
 			justify-content: center;
@@ -32,19 +37,28 @@
 			border-radius: 5px;
 
 		}
-
+		.brand_logo_container {
+			position: absolute;
+			height: 170px;
+			width: 170px;
+			top: -75px;
+			border-radius: 50%;
+			background: #60a3bc;
+			padding: 10px;
+			text-align: center;
+		}
+		.brand_logo {
+			height: 150px;
+			width: 150px;
+			border-radius: 50%;
+			border: 2px solid white;
+		}
 		.form_container {
-			margin-top: 20px;
+			margin-top: 100px;
 		}
-
-		#form-title{
-			color: #fff;
-
-		}
-
 		.login_btn {
 			width: 100%;
-			background: #33ccff !important;
+			background: #c0392b !important;
 			color: white !important;
 		}
 		.login_btn:focus {
@@ -55,7 +69,7 @@
 			padding: 0 2rem;
 		}
 		.input-group-text {
-			background: #f7ba5b !important;
+			background: #c0392b !important;
 			color: white !important;
 			border: 0 !important;
 			border-radius: 0.25rem 0 0 0.25rem !important;
@@ -65,56 +79,58 @@
 			box-shadow: none !important;
 			outline: 0px !important;
 		}
-
-		#messages{
-			background-color: grey;
-			color: #fff;
-			padding: 10px;
-			margin-top: 10px;
+		.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+			background-color: #c0392b !important;
 		}
 	</style>
 
 </head>
+<!--Coded with love by Mutiullah Samim-->
 <body>
-<div class="container h-100">
-    <div class="d-flex justify-content-center h-100">
-        <div class="user_card">
-            <div class="d-flex justify-content-center">
+
+	<div class="container h-100">
+		<div class="d-flex justify-content-center h-100">
+			<div class="user_card">
+				<div class="d-flex justify-content-center">
+					<div class="brand_logo_container">
+						<img src="https://cdn.freebiesupply.com/logos/large/2x/pinterest-circle-logo-png-transparent.png" class="brand_logo" alt="Logo">
+					</div>
+				</div>
+				<div class="d-flex justify-content-center form_container">
+					<form method="post" action="{% url 'login:login' %}">
+                        {% csrf_token %}
+						<div class="input-group mb-3">
+							<div class="input-group-append">
+								<span class="input-group-text"><em class="fas fa-user"></em></span>
+							</div>
 
 
-                <h3 id="form-title">Σύνδεση</h3>
-            </div>
-            <div class="d-flex justify-content-center form_container">
-                <form method="POST" action="">
-                    {% csrf_token %}
-                    <div class="input-group mb-3">
-                        <div class="input-group-append">
-                            <span class="input-group-text"><i class="fas fa-user"></i></span>
-                        </div>
-                        <input type="text" name="username" placeholder="Όνομα χρήστη..." class="form-control">
-                    </div>
-                    <div class="input-group mb-2">
-                        <div class="input-group-append">
-                            <span class="input-group-text"><i class="fas fa-key"></i></span>
-                        </div>
-                        <input type="password" name="password" placeholder="Κωδικός..." class="form-control" >
-                    </div>
+                            {{ form.username }}
+						</div>
+						<div class="input-group mb-2">
+							<div class="input-group-append">
+								<span class="input-group-text"><em class="fas fa-key"></em></span>
+							</div>
 
-                    <div class="d-flex justify-content-center mt-3 login_container">
-                        <input class="btn login_btn" type="submit" value="Σύνδεση">
-                    </div>
-                </form>
+                            {{ form.password }}
+						</div>
 
-            </div>
-                {% for message in messages %}
-            <p id='messages'> {{ message }}</p>
-            {% endfor %}
+							<div class="d-flex justify-content-center mt-3 login_container">
+								<input type="submit" class="btn login_btn" value="Σύνδεση">
+
+                    <input type="hidden" name="next" value="{{ next }}">
+								{% if form.errors %}
+<p><strong>Το όνομα χρήστη και ο κωδικός πρόσβασής σας δεν ταιριάζουν. Παρακαλώ προσπαθησε ξανα.</strong></p>
+{% endif %}
+				   </div>
+					</form>
+				</div>
 
 
-            </div>
-        </div>
-    </div>
-</div>
+			</div>
+		</div>
+	</div>
 </body>
-
 </html>
+
+{% endblock %}
