--- a/services/templates/services/services_detail.html
+++ b/services/templates/services/services_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-
+{% load string_to_date %}
 {% block content %}
 
 <h2 class="btn btn-dark btn-lg">
@@ -8,53 +8,21 @@
         <path fill-rule="evenodd" d="M0 1l1-1 3.081 2.2a1 1 0 01.419.815v.07a1 1 0 00.293.708L10.5 9.5l.914-.305a1 1 0 011.023.242l3.356 3.356a1 1 0 010 1.414l-1.586 1.586a1 1 0 01-1.414 0l-3.356-3.356a1 1 0 01-.242-1.023L9.5 10.5 3.793 4.793a1 1 0 00-.707-.293h-.071a1 1 0 01-.814-.419L0 1zm11.354 9.646a.5.5 0 00-.708.708l3 3a.5.5 0 00.708-.708l-3-3z" clip-rule="evenodd"/>
         <path fill-rule="evenodd" d="M15.898 2.223a3.003 3.003 0 01-3.679 3.674L5.878 12.15a3 3 0 11-2.027-2.027l6.252-6.341A3 3 0 0113.778.1l-2.142 2.142L12 4l1.757.364 2.141-2.141zm-13.37 9.019L3.001 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026z" clip-rule="evenodd"/>
     </svg>
-    Σύνολο:{{ page_obj.paginator.count }} Επισκευές </h2>
+     Επισκευές </h2>
 
 
 
-<div class="form-row">
-
-
-
-
-
-      <div class="form-group col-md-4 mb-0">
-        <form class="form-inline" action="{% url 'services:search_services_dte' %}" method="get">
-
-            <input class="form-control mr-sm-2" name="q" placeholder="Αναζήτηση ΔΤΕ..." type="text" >
-            <button class="btn btn-outline-success my-2 my-sm-0" name="Αναζήτηση" value="Αναζήτηση" type="submit">Αναζήτηση ΔΤΕ</button>
-
-        </form>
-        </div>
-
-        <div class="form-group col-md-6 mb-0">
-    <form class="form-inline" action="{% url 'services:search_service' %}" method="get">
-
-        <input  class="form-control mr-sm-2" name="q" placeholder="Αναζήτηση..." type="text" >
-        <button class="btn btn-outline-success my-2 my-sm-0" name="Αναζήτηση" value="Αναζήτηση" type="submit">Αναζήτηση</button>
-
-    </form>
-        </div>
-
-
-
-</div>
-<p></p>
-<table class="table table-hover table-bordered">
+<table class="table table-hover table-bordered" id="data-table">
 
     <thead>
 
-    <tr class="table-success" align="center">
-        <th>ID</th>
+    <tr class="table-success">
         <th><label about=""> Ημερομηνία </label></th>
         <th>Σκοπός Επίσκεψης</th>
         <th>Ενέργειες</th>
         <th>Τεχνικός</th>
-        <th>Μετρητής</th>
-        <th>Επώμενο Service</th>
         <th>Μηχάνημα</th>
         <th>ΔΤΕ</th>
-        <th>Price</th>
         <th>Πελάτης</th>
 
 
@@ -65,91 +33,42 @@
 
     {% for obj in object_list  %}
 
-    <tr align="center">
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.id }} </a></td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.Ημερομηνία}}</a> </td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.Σκοπός_Επίσκεψης}}</a> </td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.Ενέργειες}} </a> </td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.Τεχνικός}}</a> </td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.Μετρητής}}</a> </td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.Επ_Service}} </a></td>
+    <tr>
+        <td><a href=" {{ obj.id }}"><span style="display:none">{{ obj.Ημερομηνία |string_to_timestamp }}</span> {{ obj.Ημερομηνία}}</a> </td>
+        <td><a href=" {{ obj.id }}" >{{ obj.Σκοπός_Επίσκεψης}}</a> </td>
+        <td><a href=" {{ obj.id }}">{{ obj.Ενέργειες}} </a> </td>
+        <td><a href=" {{ obj.id }}" >{{ obj.Τεχνικός}}</a> </td>
 
-        <td><a role="button" class="btn btn btn-secondary btn-sm" href=" /machines/{{ obj.Copier_ID_id }}" name="id">
+        <td><a role="button" class="btn btn btn-secondary btn-sm" href=" /machines/{{ obj.Copier_ID_id }}" >
                 {{ obj.Copier_ID}}
              </a>
         </td>
 
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.ΔΤΕ}} </a></td>
-        <td><a href=" {{ obj.id }}" name="id">{{ obj.Price}} </a></td>
+        <td><a href=" {{ obj.id }}" >{{ obj.ΔΤΕ}} </a></td>
 
-        <td><a class="btn btn-primary" role="button" href="/customers/{{ obj.Copier_ID.Πελάτης.id }}" name="id">
+        <td><a class="btn btn-primary" role="button" href="/customers/{{ obj.Copier_ID.Πελάτης.id }}">
             {{ obj.Copier_ID.Πελάτης }} </a>
         </td>
+ {% endfor %}
+    </tr>
+
+    </tbody>
+    <tfoot>
+    <tr class="table-success">
+        <th><label about=""> Ημερομηνία </label></th>
+        <th>Σκοπός Επίσκεψης</th>
+        <th>Ενέργειες</th>
+        <th>Τεχνικός</th>
+        <th>Μηχάνημα</th>
+        <th>ΔΤΕ</th>
+        <th>Πελάτης</th>
+
+
 
     </tr>
-    {% endfor %}
-    </tbody>
+    </tfoot>
 </table>
 
-{% if page_obj.paginator.num_pages > 1 %}
-
-<nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
-        <li class="page-item">
-            <a class="pagination-action" href="?page=1">
-                <svg class="bi bi-caret-left-fill" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M3.86 8.753l5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 00-1.659-.753l-5.48 4.796a1 1 0 000 1.506z"/>
-                </svg>
-            </a>
-        </li>
-
-        {% if page_obj.has_previous %}
-        <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
-                Προηγούμενο
-            </a>
-        </li>
-
-        {% endif %}
-
-        {% for num in page_obj.paginator.page_range %}
-        {% if num == page_obj.number %}
-        <li class="page-item active">
-
-            <a class="page-link" href="?page={{ num }}">
-                {{ num }}
-            </a>
-            <span class="sr-only">(current)</span>
-            </span>
-        </li>
-        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-        <li class="page-item">
-            <a class="page-link" href="?page={{ num }}">
-                {{ num }}
-            </a>
-        </li>
-        {% endif %}
-        {% endfor %}
-
-        {% if page_obj.has_next %}
-        <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.next_page_number }}">
-                Επόμενη
-            </a>
-        </li>
-        <li class="page-item">
-
-            <a class="pagination-action" href="?page={{ page_obj.paginator.num_pages }}">
-                <svg class="bi bi-caret-right-fill" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12.14 8.753l-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 011.659-.753l5.48 4.796a1 1 0 010 1.506z"/>
-                </svg>
-            </a>
-        </li>
-        {% endif %}
-    </ul>
-</nav>
-
-{% endif %}
 
 
 <p>
@@ -164,7 +83,4 @@ function goBack() {
 
 
 {% endblock %}
-
-
-
 
